data/derived/fa15/progs/unify/prog1363.ml.out
Characters 268-269:
  let (_, res) = List.fold_left f base args in res
                                ^
Error: This expression has type
         (int list -> int) * int list -> int * int -> int list * int list
       but an expression was expected of type
         (int list -> int) * int list ->
         int * int -> (int list -> int) * int list
       Type int list is not compatible with type int list -> int 
